examples/test/testpolicy18802.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18802
  namespace: namespace297
spec:
  podSelector:
    matchLabels:
      key32: value12
      key15: value4
      key49: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value16
      podSelector:
        matchLabels:
          key6: value13
